# opencvdocs

bitmap-generator/: .gitignore  CMakeLists.txt  README.md
bitmap-generator/include/: bitmap.h
bitmap-generator/src/: bitmap.cpp  main.cpp
onnx-inference/: .gitignore  CMakeLists.txt
onnx-inference/include/: onnx.h
onnx-inference/src/: main.cpp  onnx.cpp
